# gynoid

./: .gitignore  CMakeLists.txt  passthrough_wifi.sh
assets/: blur.jpeg~  cover_cognitive_theory.jpg~  cover_james.jpg~  cover_readings_in_kr.jpg~  cover_soar.jpg~  ecs_header.png~  embodiment.png~  graphstar_icon.png~  heonae_profile.png~  heonae_work.png~  wildcard.png~
assets/config/: bfo_layout.txt
assets/mnist/set_0/: .0.png-autosave.kra  0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_1/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_10/: 0_nn.txt  1_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_100/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_101/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_102/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_103/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_104/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_105/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_106/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_107/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_108/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_109/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_11/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_110/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_111/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_112/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_113/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_114/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_115/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_116/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_117/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_118/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_119/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_12/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_120/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_121/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_122/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_123/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_124/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_125/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_126/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_127/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_128/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_129/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_13/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_130/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_131/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_132/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_133/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  4_nn.txt  5_nn.txt  6_nn.txt  7_nn.txt  8_nn.txt  9_nn.txt
assets/mnist/set_134/: 0_nn.txt  1_nn.txt  2_nn.txt  3_nn.txt  (+6 more)
assets/server_hud/: aeri_memory.png~  parakeet.png~
scripts/: dino_server.py  entity_color.py  entity_color_server.py  interpretation.py  precompute_colors.py
servers/: chatter_server.py
src/: LAYOUT_SYSTEMS.md  audio_stream_client.c  blender_entities.h  blender_panel.cpp  blender_panel.h  debug_log.h  dino_embedder.cpp  dino_embedder.h  frame_diff.h  glad.c  main.cpp  mel_spec_render.cpp  mel_spec_render.h  ocr_entities.h  ocr_stream.cpp  ocr_stream.h  query_server.cpp  query_server.h  sftp_client.h  spatial_containment.cpp  spatial_containment.h  spatial_index.h  vision_processor.cpp  vision_processor.h  vnc_struct.h  x11_outline.cpp  x11_outline.h
(+4582 files in other folders)
